--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -12,7 +12,7 @@
   
   <div class="flash-deal-products">
     <div class="product">
-      <img src="pics/1.jpg" alt="" id="product-1">
+      <img src="img/1.jpg" alt="" id="product-1">
       <p id="product-price">100.000</p>
       <p id="product-details">Sữa Rửa Mặt CeraVe Cho Da Thường Đến Khô 473ml</p>
       <span class="product-button">
@@ -26,7 +26,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/2.jpg" alt="" id="product-2">
+      <img src="img/2.jpg" alt="" id="product-2">
       <p id="product-price">100.000</p>
       <p id="product-details">Gel Rửa Mặt Cosrx Tràm Trà, 0.5% Độ pH Thấp 150ml</p>
       <span class="product-button">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/3.jpg" alt="" id="product-3">
+      <img src="img/3.jpg" alt="" id="product-3">
       <p id="product-price">100.000</p>
       <p id="product-details">Kem nền che khuyết điểm Dermacol</p>
       <span class="product-button">
@@ -54,7 +54,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/5.jpg" alt="" id="product-4">
+      <img src="img/5.jpg" alt="" id="product-4">
       <p id="product-price">100.000</p>
       <p id="product-details">Nước Tẩy Trang Bioderma Dành Cho Da Nhạy Cảm 500ml</p>
       <span class="product-button">
@@ -68,7 +68,7 @@
     </div>
     
     <div class="product">
-      <img src="pics/6.jpg" alt="" id="product-5">
+      <img src="img/6.jpg" alt="" id="product-5">
       <p id="product-price">100.000</p>
       <p id="product-details">Mặt Nạ Tẩy Tế Bào Chết Huxley 30g</p>
       <span class="product-button">
@@ -100,7 +100,7 @@
   
   <div class="hot-products">
     <div class="product">
-      <img src="pics/7.jpg" alt="" id="product-1" >
+      <img src="img/7.jpg" alt="" id="product-1" >
       <p id="product-price">100.000</p>
       <p id="product-details">Sữa Rửa Mặt innisfree Dịu Nhẹ Chiết Xuất Trà Xanh 150g (Mới)</p>
       <span class="product-button">
@@ -114,7 +114,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/8.jpg" alt="" id="product-2" >
+      <img src="img/8.jpg" alt="" id="product-2" >
       <p id="product-price">100.000</p>
       <p id="product-details">Kem Chống Nắng La Roche-Posay Kiểm Soát Dầu SPF50+ 50ml</p>
       <span class="product-button">
@@ -128,7 +128,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/9.jpg" alt="" id="product-3" >
+      <img src="img/9.jpg" alt="" id="product-3" >
       <p id="product-price">100.000</p>
       <p id="product-details">Kem Dưỡng La Roche-Posay Làm Dịu, Hỗ Trợ Phục Hồi Da 40ml</p>
       <span class="product-button">
@@ -142,7 +142,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/10.jpg" alt="" id="product-4" >
+      <img src="img/10.jpg" alt="" id="product-4" >
       <p id="product-price">100.000</p>
       <p id="product-details">Nước Tẩy Trang innisfree Dưỡng Ẩm Da 300ml</p>
       <span class="product-button">
@@ -156,7 +156,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/11.jpg" alt="" id="product-5" >
+      <img src="img/11.jpg" alt="" id="product-5" >
       <p id="product-price">100.000</p>
       <p id="product-details">Phấn Nước Che Phủ Hoàn Hảo LIME Real Cover Pink Cushion & V Collagen Ample SPF 50+/PA+++ 20g</p>
       <span class="product-button">
@@ -187,7 +187,7 @@
 
   <div class="products">
     <div class="product">
-      <img src="pics/12.jpg" alt="" id="product-1">
+      <img src="img/12.jpg" alt="" id="product-1">
       <p id="product-price">100.000</p>
       <p id="product-details">Phấn Phủ TFS Oil Clear Smooth & Bright Pact SPF30 PA++</p>
       <span class="product-button">
@@ -201,7 +201,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/13.jpg" alt="" id="product-2">
+      <img src="img/13.jpg" alt="" id="product-2">
       <p id="product-price">100.000</p>
       <p id="product-details">Nước Hoa Hồng Kiềm Dầu Green Tea Balancing Skin EX Innisfree( Mẫu mới )</p>
       <span class="product-button">
@@ -215,7 +215,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/14.jpg" alt="" id="product-3">
+      <img src="img/14.jpg" alt="" id="product-3">
       <p id="product-price">100.000</p>
       <p id="product-details">Kem nền BB Power V201 The Face Shop 40ml</p>
       <span class="product-button">
@@ -229,7 +229,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/15.jpg" alt="" id="product-4">
+      <img src="img/15.jpg" alt="" id="product-4">
       <p id="product-price">100.000</p>
       <p id="product-details">Kem Dưỡng SVR Giảm Mụn & Loại Bỏ Dầu Cho Da 40ml</p>
       <span class="product-button">
@@ -243,7 +243,7 @@
     </div>
 
     <div class="product">
-      <img src="pics/16.jpg" alt="" id="product-5">
+      <img src="img/16.jpg" alt="" id="product-5">
       <p id="product-price">100.000</p>
       <p id="product-details">Kem Kiểm Soát Dầu Nhờn Floslek Anti Acne Mattifying Cream 50ml Cho Da Sạch Mụn</p>
       <span class="product-button">
