--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <div class="store-logo">
-  <image src="pics/logo.jpg" class="image-front"/>
-  <image src="pics/full_logo.jpg" class="image-back"/>
+  <image src="img/logo.jpg" class="image-front"/>
+  <image src="img/full_logo.jpg" class="image-back"/>
 </div>
 
 <div class="search-bar" style="width: 50%; position: relative;">
@@ -16,7 +16,7 @@
 
   <div class="dropdown-avatar">
     <div class="avatar-image">
-      <img src="pics/4.jpg" alt="loading"/>
+      <img src="img/4.jpg" alt="loading"/>
     </div>
     <div class="avatar">
       <div class="avatar-animation">
