--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,3 +1,8 @@
+.flash-deal-board, .hot-products-board, .content-board {
+  width: 100%;
+  overflow: hidden;
+}
+
 .title {
   display: flex; 
   align-items: center; 
@@ -60,20 +65,21 @@
   }
 }
 
-.flash-deal-products {
-  display: flex;
-  overflow-x: hidden;
+.flash-deal-products, .hot-products, .products {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  overflow-x: scroll;
+  padding-right: 17px;
+  box-sizing: content-box;
   scroll-behavior: smooth;
-  justify-content: center;
   align-items: center;
   cursor: pointer;
   gap: 5px;
   height: auto;
   padding: 15px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(11.25rem, 100%), 1fr));
+  grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
   
-
   img { max-width: 100%; aspect-ratio: 1 / 1 };
 
   .prev-product {
@@ -112,14 +118,15 @@
   .next-product:hover {
     background-color: #D1A6A6;
     color: white;
-  }
+  };
 
   .product {
     background-color: white; 
+    max-width: 220px;
     aspect-ratio: 9 / 16;
     padding: 5px 12px 5px 12px;
   };
-
+  
   .product:hover {
     border: 1.5px solid red;
     border-radius: 5px;
@@ -128,104 +135,6 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 }
-
-.hot-products {
-  display: flex;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  gap: 5px;
-  height: auto;
-  padding: 15px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(11.25rem, 100%), 1fr));
-
-  img { max-width: 100%; aspect-ratio: 1 / 1 };
-
-  .prev-product {
-    position: absolute;
-    padding: 10px;
-    left: 0;
-    background-color: white;
-    color: #D1A6A6;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  };
-
-  .prev-product:hover {
-    background-color: #D1A6A6;
-    color: white;
-  }
-
-  .next-product {
-    position: absolute;
-    padding: 10px;
-    right: 0;
-    background-color: white;
-    color: #D1A6A6;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  };
-
-  .next-product:hover {
-    background-color: #D1A6A6;
-    color: white;
-  }
-
-  .product {
-    background-color: white;  
-    aspect-ratio: 9 / 16;
-    padding: 5px 12px 5px 12px;
-  };
-
-  .product:hover {
-    border: 1.5px solid red;
-    border-radius: 5px;
-    box-shadow: 1rem black;
-    scale: 1.05;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  };
-}
-
-.products {
-  display: flex;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  gap: 5px;
-  height: auto;
-  padding: 15px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(11.25rem, 100%), 1fr));
-
-  img { max-width: 100%; aspect-ratio: 1 / 1 };
-
-  .product {
-    background-color: white;  
-    aspect-ratio: 9 / 16;
-    padding: 5px 12px 5px 12px;
-  };
-
-  .product:hover {
-    border: 1.5px solid red;
-    border-radius: 5px;
-    box-shadow: 1rem black;
-    scale: 1.05;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  };
-} 
 
 #product-details {
   display: flex; 
@@ -280,4 +189,12 @@
     color: white;
     border: 1px solid white ;
   }
+}
+
+.flash-deal-products {
+  
+}
+
+.flash-deal-products::-webkit-scrollbar, .hot-products::-webkit-scrollbar, .products::-webkit-scrollbar {
+  display: none;
 }
