--- a/src/resource/views/products.hbs
+++ b/src/resource/views/products.hbs
@@ -1,3 +1,75 @@
-<h1>
-  product
-</h1>
+<div class="product-details">
+    <div class="table">
+      <div class="image-box">
+        <div class="thumbnails">
+          <img src="img/1.jpg" />
+          <img src="img/1.jpg" />
+          <img src="img/1.jpg" />
+          <img src="img/1.jpg" />
+          <img src="img/1.jpg" />
+        </div>
+
+        <div class="image">
+          <img src="img/1.jpg" />
+        </div>
+      </div>
+      
+      <div class="details-box">
+        <div class="brand">
+          <p>CeraVe</p>
+        </div>
+
+        <div class="name">
+          <p>Sữa Rửa Mặt CeraVe Cho Da Thường Đến Khô 473ml</p>
+        </div>
+  
+        <div class="price">
+          <p>300.000</p>
+        </div>
+        
+        <div class="details">
+          <p>Sữa Rửa Mặt Cerave Hydrating Cleanser giúp loại bỏ bụi bẩn, dầu thừa, nhẹ nhàng lấy đi lớp kem chống nắng, trang điểm nhưng vẫn giữ hàng rào bảo vệ da và không làm mất đi độ ẩm tự nhiên. Sữa rửa mặt dịu nhẹ với các thành phần như Ceramides và Axit Hyaluronic có tác dụng khôi phục hàng rào tự nhiên của da và dưỡng da ẩm mịn.</p>
+        </div>
+
+        <div class="button">
+          <div>
+            <i class="fi fi-rr-shopping-cart-add"></i> 
+          </div>
+          <div>
+            <i class="fi fi-rr-heart"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="product-details-more">
+    <div class="table">
+      <div class="title">
+        <p>Thông tin sản phẩm</p>
+      </div>
+      <div class="details">
+        <p>
+          🤍Loại da phù hợp:
+          •Sản phẩm thích hợp cho da thường đến khô.
+          •Có thể sử dụng cho mặt và toàn thân.
+          •Sản phẩm thích hợp cho cả người lớn và trẻ em.
+          🤍Giải pháp cho tình trạng da:
+          •Da thiếu nước, thiếu ẩm.
+          •Da khô ráp, sần sùi, bong tróc.
+          🤍Ưu thế nổi bật:
+          •Sản phẩm giúp làm sạch bụi bẩn, dầu thừa, lấy đi cặn bã lớp trang điểm còn sót trên da và làm thông thoáng lỗ chân lông nhưng vẫn duy trì độ ẩm cho da.
+          •3 loại Ceramides (1, 3, 6-II) thiết yếu giúp khôi phục hàng rào độ ẩm da.
+          •Công nghệ MVE độc quyền khoá ẩm cho da suốt 24 giờ.
+          •Hyaluronic Acid giúp duy trì độ ẩm tự nhiên của da.
+          🤍 Độ an toàn:
+          •Không xà phòng
+          •Không hương liệu
+          •Không chứa paraben
+          •Không bít tắc lỗ chân lông
+          •Đã được kiểm nghiệm không gây kích ứng.
+        </p>
+      </div>
+    </div>
+  </div>
