--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="img/4.jpg" />
+  <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
+  <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/advertise.css">
+  <link rel="stylesheet" href="/css/allProducts.css">
+  <link rel="stylesheet" href="/css/body.css">
   <link rel="stylesheet" href="/css/footer.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/home.css">
