--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,6 +1,8 @@
 <div class="store-logo">
-  <image src="img/logo.jpg" class="image-front"/>
-  <image src="img/full_logo.jpg" class="image-back"/>
+  <a href="/home">
+    <image src="../img/logo.jpg" class="image-front"/>
+    <image src="../img/full_logo.jpg" class="image-back"/>
+  </a>
 </div>
 
 <div class="search-bar" style="width: 50%; position: relative;">
@@ -25,7 +27,7 @@
 
   <div class="dropdown-avatar">
     <div class="avatar-image">
-      <img src="img/4.jpg" alt="loading"/>
+      <img src="../img/4.jpg" alt="loading"/>
     </div>
     <div class="avatar">
       <div class="avatar-animation">
