--- a/src/resource/views/partials/navigate.hbs
+++ b/src/resource/views/partials/navigate.hbs
@@ -97,10 +97,10 @@
     </div>
 
     <div style="display: flex; align-items: center; padding: 0 15px 0;" class="dropdown-title">
-      <h5>VỀ CHÚNG TÔI</h5>
+      <h5>GIỚI THIỆU</h5>
     </div>
     <div style="display: flex; align-items: center; padding: 0 15px 0;" class="dropdown-title">
-      <h5>SẢN PHẨM KHUYẾN MÃI</h5>
+      <h5>HÀNG MỚI VỀ</h5>
     </div>
   </div>
 </div>
