--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -1,5 +1,5 @@
 <div class="handle-products">
-  <form method="post" action="/admin/store">
+  <form method="post" action="/admin/created">
     <div class="form-title">
       <p>Thêm sản phẩm mới</p>
     </div>
