--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/home.css">
   <link rel="stylesheet" href="/css/navigate.css">
   <link rel="stylesheet" href="/css/products.css">
+  <link rel="stylesheet" href="/css/update.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
