--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -1,6 +1,6 @@
 <div class="information">
   <div class="commitment-information">
-    <img src="../img/full_logo.jpg" />
+    <img src="../../img/full_logo.jpg" />
     <p>Bunny Store là cửa hàng mỹ phẩm chính hãng uy tín và dịch vụ chăm sóc khách hàng tận tâm. Đến với Bunny Store, bạn có thể hoàn toàn yên tâm chọn cho mình bộ sản phẩm phù hợp và ưng ý từ các nhãn hàng nổi tiếng trên toàn thế giới.</p>
   </div>
   <div class="policy-information">
