--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <div class="store-logo">
   <a href="/home">
-    <image src="../img/logo.jpg" class="image-front"/>
-    <image src="../img/full_logo.jpg" class="image-back"/>
+    <image src="../../img/logo.jpg" class="image-front"/>
+    <image src="../../img/full_logo.jpg" class="image-back"/>
   </a>
 </div>
 
@@ -27,22 +27,22 @@
 
   <div class="dropdown-avatar">
     <div class="avatar-image">
-      <img src="../img/4.jpg" alt="loading"/>
+      <img src="../../img/4.jpg" alt="loading"/>
     </div>
     <div class="avatar">
       <div class="avatar-animation">
         <div class="avatar-content">
-          <a href="">Thông tin cá nhân</a>
+          <a href="/admin/create">Thêm sản phẩm</a>
         </div>
       </div>
       <div class="avatar-animation">
         <div class="avatar-content">
-          <a href="">Đổi mật khẩu</a>
+          <a href="/admin/update">Sửa sản phẩm</a>
         </div>
       </div>
       <div class="avatar-animation">
         <div class="avatar-content">
-          <a href="">Đăng xuất</a>
+          <a href="">Xoá sản phẩm</a>
         </div>
       </div>
     </div>
