--- a/src/resource/views/admin/update.hbs
+++ b/src/resource/views/admin/update.hbs
@@ -1,6 +1,26 @@
-<div class="update-board">
+<form class="update-board" name="container" method="post" action="/admin/form-actions">
+  <div class="form-action">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="checkbox-all" onClick="checkAll(this)">
+      <label class="form-check-label" for="checkbox-all">
+        Chọn tất cả
+      </label>
+    </div>
+
+    <select class="form-select" id="formControlSelect" name="action" required>
+      <option value="">--Chọn hành động--</option>
+      <option value="delete">Xoá</option>
+      <option value=""></option>
+      <option value=""></option>
+      <option value=""></option>
+    </select>
+
+    <button class="form-button">Áp dụng</button>
+  </div>
+  
   <table style="width:100%">
     <tr>
+      <th></th>
       <th>Id</th>
       <th>Brand</th>
       <th>Name</th>
@@ -9,15 +29,89 @@
     </tr>
     {{#each product}}
     <tr>
+      <td>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="{{this._id}}" name="courseIds[]" onclick="check(this)">
+        </div>
+      </td>
       <td>{{addIndex @index 1}}</td>
       <td>{{this.brand}}</td>
       <td>{{this.name}}</td>
       <td>{{this.description}}</td>
       <td>
-        <a href="/admin/update/{{this._id}}" class="update-button">Sửa</a>
-        <a href="" class="update-button">Xoá</a>
+        <a href="/admin/updating/{{this._id}}" class="update-button"><button>Sửa</button></a>
+        <button id="{{this._id}}" onclick="reply_click(this.id)">Xoá</button>
+        <div id="id01" class="modal">
+          <form class="modal-content">
+            <div class="container">
+              <p>Bạn có muốn xoá sản phẩm {{this.name}} không</p>
+              <div class="clearfix">
+                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Huỷ</button>
+                <button id="delete-button" type="button" class="deletebtn">Xoá</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </td>
     </tr>
     {{/each}}
   </table>
-</div>
+
+  <p>Tổng sản phẩm</p>
+  <p>{{total}}</p>
+  <a href="/admin/trash">Thùng rác</a>
+</form>
+
+<form name="delete-form" method="post"></form>
+
+<script>
+  // display delete confirmation box
+  var courseId;
+  var deleteForm = document.forms['delete-form']
+  var deleteButton = document.getElementById('delete-button')
+  var formButton = document.getElementsByClassName('form-button')
+
+  function reply_click(clicked_id) {
+    document.getElementById('id01').style.display='block'
+    courseId = clicked_id
+  }
+
+  // delete action
+  deleteButton.onclick = function () {
+    deleteForm.action = '/admin/delete/' + courseId + '?_method=DELETE'
+    deleteForm.submit()
+  }
+
+  // checkbox all
+  var itemCheckBoxes = document.getElementsByName('courseIds[]')
+  function checkAll(source) {
+    for (let i=0; i < itemCheckBoxes.length; i++) {
+      itemCheckBoxes[i].checked = source.checked
+    }
+  }
+
+  var checkedItem = 0
+  function check(source) {
+    var checkBoxAll = document.getElementById('checkbox-all')
+    if (checkBoxAll.checked) {
+      checkedItem = itemCheckBoxes.length
+    }
+
+    if(source.checked) {
+      checkedItem++
+    } else {
+      checkedItem--
+    }
+    var ifCheckAll = itemCheckBoxes.length === checkedItem
+    checkBoxAll.checked = ifCheckAll
+    reRenderSubmitButton()
+  }
+  
+  // change submit button behavior
+  function reRenderSubmitButton() {
+    if (checkedItem > 0) {
+      formButton.style.color = 'red';
+    }
+  }
+
+</script>
